# TMTool

./: .gitignore  LICENSE  README.md  csv2template.py  cvss.py  example_report_w_urls.htm  jira_issues.py  model2csv.py  newT.tb7  pyproject.toml  requirements.txt  setup.cfg  setup.py  template2csv.py  test_model.tm7  test_template.tb7  threat_modeling_notes.md  threat_modeling_notes.txt
.github/: bump_version.py  bump_version_setupcfg.py
.github/workflows/: myaction.yml
Scripts/: confluence.py  empty_creds.py  fix_report_hyperlinks.py  jira_issues.py  template2csv.py  template2sql.py  template2xlsx.py  xlsx2template.py
TMT/: comand_line.py
TMTool/: cli.py  gui.py  main.py
TMTool/Scripts/: asset_form.py  confluence.py  empty_creds.py  fix_report_hyperlinks.py  jira_issues.py  model2csv.py  set_assets.py  set_metadata_tags.py  template2sql.py  template2xlsx.py  tooltip.py  xlsx2template.py
TMTool/Scripts/Model/: asset_form.py  set_assets.py  set_metadata_tags.py  tmt2td.py
TMTool/Scripts/Scoring/: cvss.py  model_score.py  owasp_rr.py
TMTool/Scripts/Template/: template2xlsx.py  template_diff.py  xlsx2template.py
WIP Scripts/: CIA_form.py  asset_form.py  confluence.py  csv2template.py  cvss.py  jira_issues.py  model2csv.py  model_score.py  set_metadata_tags.py  template2sql.py  tooltip.py  xlsx2template.py
