[project]
name = "TMTool"
version = "0.0.43"
description = "python tool for Microsoft Threat modeling tool"
maintainers = [
    {name="Tyler Martin", email="tmart234@gmail.com"}
]
readme = "README.md"
authors = [
    {name="Tyler Martin", email="tmart234@gmail.com"}
]
requires-python = "^3.7"

[project.urls]
homepage = "https://github.com/tmart234/TMT"
documentation = "https://github.com/tmart234/TMT" # Adjust this if you have a dedicated documentation URL
repository = "https://github.com/tmart234/TMT"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
