[project]
name = "TMTool"
version = "0.0.46"
description = "python tool for Microsoft Threat modeling tool"
readme = "README.md"
[[project.maintainers]]
name = "Tyler Martin"
email = "tmart234@gmail.com"

[[project.authors]]
name = "Tyler Martin"
email = "tmart234@gmail.com"

[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project.project]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/tmart234/TMT"
documentation = "https://github.com/tmart234/TMT"
repository = "https://github.com/tmart234/TMT"
