[metadata]
name = TMTool
version = 0.0.42
license = MIT


[options]
include_package_data = True
install_requires = 
	tkinter
	openpyxl
	xlsxwriter
	Click
	lxml
	atlassian-python-api
	pypandoc
	xmltodict
	jira
	ttkthemes
	enum37;python_version<'3.7'
package_dir=
    =src
packages=find:

[options.entry_points]
console_scripts = 
	main = TMTool:main

[options.packages.find]
where=src