[metadata]
name = TMTool
version = 0.0.49
license = MIT


[options]
include_package_data = True
install_requires = 
	openpyxl
	xlsxwriter
	Click
	lxml
	atlassian-python-api
	pypandoc
	xmltodict
	jira
	enum37;python_version<'3.7'
package_dir=
    =src
packages=find:

[options.entry_points]
console_scripts = 
	main = TMTool:main

[options.packages.find]
where = TMTool
